2017-11-11  Bruno Haible  <bruno@clisp.org>

	New option --cbcx that includes "make extracheck".
	* configure: Accept option --cbcx.
	* Makefile.devel (build-porting*): Use option --cbcx instead of --cbc.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Prepare for enabling optimizations on a per-platform basis.
	* makemake.in (enable_portability): Allow three values: no, ifuseful,
	yes.
	(XCFLAGS): Add flags that disable optimizations that have not yet been
	verified to work, for each platform.
	* Makefile.devel (build-porting*): Configure with option
	--disable-portability.
	(multibuild-*): New targets, one per platform.
	* unix/PLATFORMS: Explain the per-platform porting process.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	New heuristics for deciding which object representation to use.
	* lispbibl.d (TYPECODES, HEAPCODES): New logic which one to choose by
	default.
	(ONE_FREE_BIT_HEAPCODES, KERNELVOID32_HEAPCODES, GENERIC64_HEAPCODES):
	Likewise.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Avoid known unsupported features on specific platforms.
	* lispbibl.d (TRIVIALMAP_MEMORY): Don't enable by default on Cygwin
	and in a specific case on Linux/m68k.
	(GENERATIONAL_GC): Don't enable by default on NetBSD, Linux/hppa,
	Linux/m68k.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Tweak support for Haiku.
	* lispbibl.d (TRIVIALMAP_MEMORY): Don't enable by default on Haiku.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Record whether GENERIC64C_HEAPCODES works.
	* lispbibl.d (GENERIC64C_HEAPCODES_WORKS): Define for each 64-bit
	platform.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Record whether KERNELVOID32_HEAPCODES works.
	* lispbibl.d (KERNELVOID32_HEAPCODES_WORKS): Define for each 32-bit
	platform.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Find good parameters for using ONE_FREE_BIT_HEAPCODES, per platform.
	* lispbibl.d (garcol_bit_o, imm_type_shift, oint_type_*, oint_addr_*):
	Find appropriate values for ONE_FREE_BIT_HEAPCODES, depending on